// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterPreviewForm snapshots matches snapshot for long variant 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-long"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <input
      name="templateId"
      readonly=""
      type="hidden"
      value="template-123"
    />
    <input
      name="variant"
      readonly=""
      type="hidden"
      value="long"
    />
    <input
      name="lockNumber"
      readonly=""
      type="hidden"
      value="1"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-long"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-long"
        name="pdsPersonalisationPackId"
      >
        <option
          selected=""
          value=""
        >
          Select a recipient
        </option>
        <option
          value="long-1"
        >
          Joseph Anthony Hendrington-Bloggs
        </option>
        <option
          value="long-2"
        >
          Dr Alejandro Ruiz Fernandez
        </option>
        <option
          value="long-3"
        >
          Prof Catherine Montgomery-Harrington
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-long"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-long"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterPreviewForm snapshots matches snapshot for short variant 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-short"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <input
      name="templateId"
      readonly=""
      type="hidden"
      value="template-123"
    />
    <input
      name="variant"
      readonly=""
      type="hidden"
      value="short"
    />
    <input
      name="lockNumber"
      readonly=""
      type="hidden"
      value="1"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-short"
        name="pdsPersonalisationPackId"
      >
        <option
          selected=""
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Blogs
        </option>
        <option
          value="short-2"
        >
          Dr Li Wei
        </option>
        <option
          value="short-3"
        >
          Mx Ana Kim
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-short"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-short"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
      />
    </div>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-clinicName-short"
      >
        clinicName
      </label>
      <input
        class="nhsuk-input"
        id="custom-clinicName-short"
        maxlength="500"
        name="custom_clinicName"
        type="text"
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterPreviewForm snapshots matches snapshot without custom personalisation 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-short"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <input
      name="templateId"
      readonly=""
      type="hidden"
      value="template-123"
    />
    <input
      name="variant"
      readonly=""
      type="hidden"
      value="short"
    />
    <input
      name="lockNumber"
      readonly=""
      type="hidden"
      value="1"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-short"
        name="pdsPersonalisationPackId"
      >
        <option
          selected=""
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Blogs
        </option>
        <option
          value="short-2"
        >
          Dr Li Wei
        </option>
        <option
          value="short-3"
        >
          Mx Ana Kim
        </option>
      </select>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;
